fix vertical scrollbar issue
closes https://github.com/iqb-berlin/testcenter-frontend/issues/237

--- a/src/app/group-monitor/group-monitor.component.css
+++ b/src/app/group-monitor/group-monitor.component.css
@@ -1,3 +1,7 @@
+.page-body {
+    overflow-x: hidden;
+}
+
 .test-view-table {
     width: 100%;
     border-collapse: collapse;
@@ -5,17 +9,12 @@
 }
 
 .adminbackground {
-    flex: 10 0 900px;
     box-shadow: 5px 10px 20px black;
     background-color: white;
-    min-height: 85%;
-    margin: 0 15px 15px 15px;
+    margin: 0 15px 0 15px;
     padding: 15px 25px 25px 25px;
-}
-
-
-.test-view-table-wrapper {
-    overflow-x: auto;
+    height: 100%;
+    overflow: auto;
 }
 
 .page-header {
@@ -121,7 +120,18 @@ mat-sidenav {
     width: 350px;
 }
 
+.mat-drawer-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 40px;
+    overflow: initial;
+    height: initial;
+}
+
 .mat-drawer-container {
+    position: initial;
     background: none;
 }
 
@@ -158,3 +168,12 @@ mat-sidenav {
     font-style: italic;
     text-transform: uppercase;
 }
+
+
+
+
+
+
+
+
+
